--- a/app/index.html
+++ b/app/index.html
@@ -23,8 +23,11 @@
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="ui huge input">
+      <div class="row result-container">
+        <div id="result1" class="ui huge input">
+          <input type="text" value="{{app.expression.join('')}}">
+        </div>
+        <div id="result2" class="ui huge input" style="display:none;">
           <input type="text" value="{{app.expression.join('')}}">
         </div>
       </div>
