--- a/app/index.html
+++ b/app/index.html
@@ -6,18 +6,18 @@
     <link rel="stylesheet" href="..\bower_components\semantic\dist\semantic.css">
     <link rel="stylesheet" href="css/styles.css">
   </head>
-  <body ng-app="calculator" ng-controller="mainController as app">
+  <body ng-app="calculator" ng-controller="mainController as main">
     <div class="ui equal width center aligned padded grid main-container">
       <div class="row menu-container">
         <div class="ui inverted segment">
           <div class="ui inverted secondary pointing menu">
-            <a class="active item">
+            <a ng-href="#/" ng-class="{active:page=='basic'}" class="item">
               Basic
             </a>
-            <a ng-show="false" class="item">
+            <a ng-href="#/scientific" ng-class="{active:page=='scientific'}" class="item">
               Scientific
             </a>
-            <a ng-click="app.close()" class="ui icon right item">
+            <a ng-click="main.close()" class="ui icon right item">
               <i class="close icon"></i>
             </a>
           </div>
@@ -25,110 +25,14 @@
       </div>
       <div class="row result-container">
         <div id="result1" class="ui huge input">
-          <input type="text" value="{{app.expression.join('')}}">
+          <input type="text" value="{{expression.join('')}}">
         </div>
         <div id="result2" class="ui huge input" style="display:none;">
-          <input type="text" value="{{app.expression.join('')}}">
+          <input type="text" value="{{expression.join('')}}">
         </div>
       </div>
-      <div class="row">
-        <div class="ui inverted equal width grid controls">
-          <div class="ui inverted segment row right">
-            <div class="four wide column">
-              <button ng-click="app.clear()" class="ui icon button">
-                <i class="arrow left icon"></i>
-              </button>
-            </div>
-          </div>
-          <div class="ui inverted segment row">
-            <div class="column">
-              <button ng-click="app.add(7)" class="ui icon button">
-                <i class="icon text">7</i>
-              </button>
-            </div>
-            <div class="column">
-              <button ng-click="app.add(8)" class="ui icon button">
-                <i class="icon text">8</i>
-              </button>
-            </div>
-            <div class="column">
-              <button ng-click="app.add(9)" class="ui icon button">
-                <i class="icon text">9</i>
-              </button>
-            </div>
-            <div class="column">
-              <button ng-click="app.add('/')" class="ui icon button">
-                <i class="icon text">/</i>
-              </button>
-            </div>
-          </div>
-          <div class="ui inverted segment row">
-            <div class="column">
-              <button ng-click="app.add(4)" class="ui icon button">
-                <i class="icon text">4</i>
-              </button>
-            </div>
-            <div class="column">
-              <button ng-click="app.add(5)" class="ui icon button">
-                <i class="icon text">5</i>
-              </button>
-            </div>
-            <div class="column">
-              <button ng-click="app.add(6)" class="ui icon button">
-                <i class="icon text">6</i>
-              </button>
-            </div>
-            <div class="column">
-              <button ng-click="app.add('*')" class="ui icon button">
-                <i class="icon remove"></i>
-              </button>
-            </div>
-          </div>
-          <div class="ui inverted segment row">
-            <div ng-click="app.add(1)" class="column">
-              <button class="ui icon button">
-                <i class="icon text">1</i>
-              </button>
-            </div>
-            <div class="column">
-              <button ng-click="app.add(2)" class="ui icon button">
-                <i class="icon text">2</i>
-              </button>
-            </div>
-            <div class="column">
-              <button ng-click="app.add(3)" class="ui icon button">
-                <i class="icon text">3</i>
-              </button>
-            </div>
-            <div class="column">
-              <button ng-click="app.add('-')" class="ui icon button">
-                <i class="icon minus"></i>
-              </button>
-            </div>
-          </div>
-          <div class="ui inverted segment row">
-            <div class="column">
-              <button ng-click="app.add('.')" class="ui icon button">
-                <i class="icon text">.</i>
-              </button>
-            </div>
-            <div class="column">
-              <button ng-click="app.add('0')" class="ui icon button">
-                <i class="icon text">0</i>
-              </button>
-            </div>
-            <div class="column">
-              <button ng-click="app.eval()" class="ui icon button">
-                <i class="icon text">=</i>
-              </button>
-            </div>
-            <div class="column">
-              <button ng-click="app.add('+')" class="ui icon button">
-                <i class="icon plus"></i>
-              </button>
-            </div>
-          </div>
-        </div>
+      <div ng-view class="row">
+
       </div>
     </div>
     <script src="..\bower_components\jquery\dist\jquery.js"></script>
@@ -137,6 +41,12 @@
     </script>
     <script src="..\bower_components\semantic\dist\semantic.js"></script>
     <script src="..\bower_components\angular\angular.js"></script>
+    <script src="..\bower_components\angular-route\angular-route.js"></script>
+    <script src="..\bower_components\angular-animate\angular-animate.js"></script>
+
     <script src="js/app.js"></script>
+    <script src="js/services.js"></script>
+    <script src="js/basic.controller.js"></script>
+    <script src="js/scientific.controller.js"></script>
   </body>
 </html>
